# hector-analyst-agent

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  pyproject.toml
docs/: ARCHITECTURE.md  product_session_2026-04-19.txt
scripts/: backtest.py  build_dashboard.py  live_validation.py  run_demo.py
src/analyst/: __init__.py  agent.py  cli.py  schemas.py
src/analyst/data/: __init__.py  mcp_adapter.py  mock.py  protocol.py  quality.py
src/analyst/nodes/: __init__.py  classifier.py  computer.py  narrator.py  retriever.py
src/analyst/tools/: __init__.py  anomaly.py  attribution.py  changepoint.py  counterfactual.py  denoiser.py  elasticity.py  forecast.py
tests/: conftest.py  test_agent.py  test_anomaly.py  test_attribution.py  test_changepoint.py  test_classifier.py  test_counterfactual.py  test_denoiser.py  test_elasticity.py  test_forecast.py  test_mcp_adapter.py  test_quality.py
