[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hector-analyst-agent"
version = "0.1.0"
description = "Hector Q-Comm Analyst Agent — forecasting, counterfactual, and causal attribution engine for quick-commerce brand intelligence."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hector" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
analyst = "analyst.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
